トップ画面に表示するシュミレーター情報を取得
